--- a/static_files/materials/approximations.ipynb
+++ b/static_files/materials/approximations.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
     {
      "data": {
       "text/html": [
-       "<video src=\"media/jupyter/PlotGraph@2024-07-17@23-20-06.mp4\" controls autoplay loop style=\"max-width: 60%;\"  >\n",
+       "<video src=\"media/jupyter/PlotGraph@2024-07-18@23-17-38.mp4\" controls autoplay loop style=\"max-width: 60%;\"  >\n",
        "      Your browser does not support the <code>video</code> element.\n",
        "    </video>"
       ],
@@ -300,6 +300,129 @@
     "            self.play(AnimationGroup(point.animate.move_to(new_point), Transform(point_label, new_label), Wait(animation_speed)))\n",
     "\n",
     "            # \n",
+    "\n",
+    "        # Some time to think\n",
+    "        self.play(Wait(5))\n",
+    "\n",
+    "        print(guess)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.18.1</span>\n",
+       "\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m18.1\u001b[0m\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                         \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"media/jupyter/PlotGraph@2024-07-18@23-20-41.mp4\" controls autoplay loop style=\"max-width: 60%;\"  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%manim -qm -v WARNING PlotGraph\n",
+    "\n",
+    "class PlotGraph(Scene):\n",
+    "    def construct(self):\n",
+    "        axes = Axes(\n",
+    "            x_range=[-5, 5, 1],\n",
+    "            y_range=[-100, 100, 25],\n",
+    "            axis_config={\"include_numbers\": True},\n",
+    "        )\n",
+    "\n",
+    "        # Newton's Method parameters\n",
+    "        initial_guess = 3\n",
+    "        epsilon = 5\n",
+    "        max_iterations = 10\n",
+    "        animation_speed = 1\n",
+    "\n",
+    "        # Define the function and its derivative\n",
+    "        def func(x):\n",
+    "            return x**3 - 27\n",
+    "        \n",
+    "        def func_derivative(x):\n",
+    "            return 3 * x**2\n",
+    "\n",
+    "        # Add initial point and label\n",
+    "        guess = initial_guess\n",
+    "        point = Dot(axes.c2p(guess, func(guess)), color=YELLOW)\n",
+    "        point_label = MathTex(f\"({guess:.2f}, {func(guess):.2f})\").next_to(point, UP)\n",
+    "        \n",
+    "        # Plot the function\n",
+    "        graph = axes.plot(func, color=BLUE)\n",
+    "\n",
+    "        # Add labels to the axes\n",
+    "        x_label = axes.get_x_axis_label(Tex(\"x\"))\n",
+    "        y_label = axes.get_y_axis_label(Tex(\"y\"))\n",
+    "\n",
+    "        # Add the graph and labels to the scene\n",
+    "        self.add(axes, graph, point, point_label, x_label, y_label)\n",
+    "\n",
+    "        # Iterate using Newton's Method\n",
+    "        for _ in range(max_iterations):\n",
+    "            tangent_line = axes.plot(\n",
+    "                lambda x: func(guess) + func_derivative(guess) * (x - guess)\n",
+    "            )\n",
+    "            \n",
+    "            new_guess = guess - func(guess) / func_derivative(guess)\n",
+    "            \n",
+    "            # Add tangent line and animate changes\n",
+    "            new_point = Dot(axes.c2p(new_guess, 0), color=YELLOW)\n",
+    "            new_label = MathTex(f\"({new_guess:.2f}, 0)\").next_to(new_point, UP)\n",
+    "            \n",
+    "            self.play(Create(tangent_line))\n",
+    "            self.play(AnimationGroup(\n",
+    "                point.animate.move_to(new_point),\n",
+    "                Transform(point_label, new_label),\n",
+    "                Wait(animation_speed)\n",
+    "            ))\n",
+    "            \n",
+    "            # Remove the tangent line before the next iteration\n",
+    "            self.remove(tangent_line)\n",
+    "\n",
+    "            # Update guess\n",
+    "            guess = new_guess\n",
+    "            \n",
+    "            # Break if we're close enough\n",
+    "            if abs(func(guess)) < epsilon:\n",
+    "                break\n",
     "\n",
     "        # Some time to think\n",
     "        self.play(Wait(5))\n",
